# OpenHD-SysUtils

./: .gitignore  CMakeLists.txt  README.md  SCRIPTS.md  build_chroot.sh  openhd_emmc_util.sh  openhd_resize_util.sh  openhd_sys_utils.service  openhd_sys_utils.sh  openhd_update_utils.sh
.github/workflows/: build.yml  build_sysutils_Rock5_Chroot_debian.yml  build_sysutils_package.yml  build_sysutils_package_rpi.yml  build_sysutils_package_rpi5_bookworm.yml  build_sysutils_package_x86_22.04.yml  build_sysutils_package_x86_23.04.yml  build_sysutils_package_x86_24.04.yml  build_sysutils_x20_Chroot_debian.yml  cloudsmith_cleanup.yml  crosscompile-orqa.yml  release.yml  update_buildroot_sysutils.yml
cmake/: cpack_project_config.cmake.in
inc/: sysutil_camera.h  sysutil_config.h  sysutil_debug.h  sysutil_firstboot.h  sysutil_hostname.h  sysutil_led.h  sysutil_part.h  sysutil_platform.h  sysutil_protocol.h  sysutil_serial.h  sysutil_settings.h  sysutil_status.h  sysutil_update.h  sysutil_video.h  sysutil_wifi.h
init.d/: openhd-sys-utils
misc/: old_sh_tasks.md  partitioning_current.md  platforms.json  wifi_cards.json
old/: README.md  SCRIPTS.md  mjpeg_decode.sh  ohd_camera_setup.sh  openhd_sys_utils.service
old/misc/: default_raspi_config.txt
old/packaging/: after-install.sh
packaging/: before-install.sh  postinst  postrm  prerm
sbin/: openhd-rk3566-bookworm-splash-setup
src/: main.cpp  openhd_sys_utils.cpp  sysutil_camera.cpp  sysutil_config.cpp  sysutil_debug.cpp  sysutil_firstboot.cpp  sysutil_hostname.cpp  sysutil_led.cpp  sysutil_part.cpp  sysutil_platform.cpp  sysutil_protocol.cpp  sysutil_serial.cpp  sysutil_settings.cpp  sysutil_status.cpp  sysutil_update.cpp  sysutil_video.cpp  sysutil_wifi.cpp
src/commands/: emmc.cpp  emmc.h  init.cpp  init.h  resize.cpp  resize.h  update.cpp  update.h
src/tests/: test_settings.json  test_settings_numeric.json
src/ui/: banner.cpp  banner.h
src/utils/: filesystem_utils.cpp  filesystem_utils.h  process.cpp  process.h  string_utils.cpp  string_utils.h
systemd/: openhd-sys-utils.service  openhd_sys_utils.service
tools/: gen_platforms.cpp  gen_platforms.py  increment_build_version.cmake
